summer school update

--- a/NotebookROM_SummerSchool_students.ipynb
+++ b/NotebookROM_SummerSchool_students.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "qmOMYsShkW5D"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -32,6 +35,7 @@
       },
       "source": [
         "### **What are stents?**\n",
+        "\n",
         "Stents are small, tube-like devices used to hold open narrowed or blocked arteries or other blood vessels in the body. They are often made of metal or plastic mesh and are commonly used in procedures like angioplasty to restore blood flow in cases of coronary artery disease. Some stents are coated with medication to prevent the artery from narrowing again, while others are simple mechanical supports.\n",
         "\n",
         "There exist two main types of stents. **Balloon-expandable stents** are made from materials like stainless steel and are deployed by inflating a balloon inside the stent, which forces it to expand. They provide high radial force and are ideal for precise placement, such as in coronary arteries. In contrast, **self-expandable stents** are made from shape-memory materials like nitinol. They expand on their own after being released from a catheter and are more flexible, making them suitable for areas that experience movement or compression, like peripheral arteries.\n",
@@ -66,7 +70,7 @@
         "\n",
         "![Parametric vessel](https://i.imgur.com/tccLgJy.png)\n",
         "\n",
-        "Eventually, this model could be translated to a realistic case with patient-specific geometries using a geometrical parameters or statistical parameters, computed by building a statistical shape model (see class 18/12/24).\n",
+        "Eventually, this model could be translated to a realistic case with patient-specific geometries using geometrical parameters or statistical parameters. The latter are computed by building a statistical shape model.\n",
         "\n",
         "![Patient-specific vessel](https://i.imgur.com/dql3B00.png)\n",
         "\n"
@@ -241,18 +245,37 @@
         "id": "V4MPR5TNgoPg"
       },
       "source": [
-        "**EXERCISE**: How many nodes compose the stent? How many elements?"
+        "How many nodes compose the stent? How many elements?"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Read the contents of the file\n",
+        "file_name = \"Input/pos_stent.txt\"\n",
+        "with open(file_name, 'r') as file:\n",
+        "    content = file.read()\n",
+        "    # Split the content into lines and count them\n",
+        "    num_lines = len(content.splitlines())\n",
+        "\n",
+        "# Print the number of lines\n",
+        "print(f\"Number of nodes: {num_lines}\")\n",
+        "\n",
+        "# Read the contents of the file\n",
+        "file_name = \"Input/conn_stent.txt\"\n",
+        "with open(file_name, 'r') as file:\n",
+        "    content = file.read()\n",
+        "    # Split the content into lines and count them\n",
+        "    num_lines = len(content.splitlines())\n",
+        "\n",
+        "# Print the number of lines\n",
+        "print(f\"Number of elements: {num_lines}\")"
+      ],
       "metadata": {
-        "collapsed": true,
-        "id": "TqMoE-kognol"
+        "id": "YeHEMxyVKaDk"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -369,7 +392,7 @@
         "id": "WKGHaMdLlmS0"
       },
       "source": [
-        "This is a Python example of the use of LHS for sampling two parameters (`num_dimensions`). Plot the distribution of the points for different number of samples (`num_samples`)."
+        "This is a Python example of the use of LHS for sampling two parameters (`num_dimensions` = 2) for a certain number of samples (`num_samples`)."
       ]
     },
     {
@@ -388,7 +411,7 @@
         "num_dimensions = 2\n",
         "\n",
         "# Define sample size\n",
-        "num_samples = 100\n",
+        "num_samples = 3000\n",
         "\n",
         "# Create a Latin Hypercube Sampler\n",
         "lhs_sampler = qmc.LatinHypercube(d=num_dimensions)\n",
@@ -410,9 +433,7 @@
         "id": "-K_k3v4Qlwbp"
       },
       "source": [
-        "The LHS provides values between 0 and 1. How can we change the ranges in which the parameters are varying? We need to rescale the data.\n",
-        "\n",
-        "To scale the data from the unit interval [0,1] to a specified range [a,b], we can use this equation:\n",
+        "The LHS provides values between 0 and 1. To scale the data from the unit interval [0,1] to a specified range [a,b], we can use teh following equation:\n",
         "\n",
         "$x_{\\text{scaled}} = a + (b - a) \\cdot x_{\\text{sample}}$\n",
         "\n",
@@ -420,21 +441,7 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BWV917U8ZYXj"
-      },
-      "source": [
-        "Implement this equation to rescale the data and plot the scaled results."
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "kowjpuO0lwHU"
-      },
-      "outputs": [],
       "source": [
         "# Parameters bounds\n",
         "param1_bounds = (-5.0, 5.0)  # Range for Parameter 1\n",
@@ -456,7 +463,12 @@
         "plt.grid(True)\n",
         "plt.legend()\n",
         "plt.show()"
-      ]
+      ],
+      "metadata": {
+        "id": "7nNarPVQL1wC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -470,17 +482,49 @@
         "*   `control_point_z_bounds = (0.0, 50.0)`\n",
         "*   `deploy_site_bounds = (0.01, 1.0)`\n",
         "\n",
-        "**EXERCISE:**  Change the LHS code to compute `num_samples = 5` with LHS (considering the ranges indicated above) and visualise them."
+        "We can change the LHS code to compute `num_samples = 5` with LHS (considering the ranges indicated above) and visualise them."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Parameters\n",
+        "num_dimensions = 4\n",
+        "vessel_radius_bounds = (1.0, 2.5)  # Range for vessel radius\n",
+        "control_point_x_bounds = (0.0, 50.0)  # Control point X bounds\n",
+        "control_point_z_bounds = (0.0, 50.0)  # Control point Z bounds\n",
+        "deploy_site_bounds = (0.01, 1.0)  # Range for deploy_site (0 to 1)\n",
+        "\n",
+        "# Updated bounds to include deploy_site\n",
+        "bounds = [vessel_radius_bounds, control_point_x_bounds, control_point_z_bounds, deploy_site_bounds]\n",
+        "\n",
+        "# Define sample size\n",
+        "num_samples = 5\n",
+        "\n",
+        "# Create a Latin Hypercube Sampler\n",
+        "lhs_sampler = qmc.LatinHypercube(d=num_dimensions)\n",
+        "lhs_sample = lhs_sampler.random(n=num_samples)\n",
+        "\n",
+        "# Scale the LHS sample to the given bounds\n",
+        "scaled_lhs_sample = np.empty_like(lhs_sample)\n",
+        "for i, (lower, upper) in enumerate(bounds):\n",
+        "  scaled_lhs_sample[:, i] = lower + lhs_sample[:, i] * (upper - lower)\n",
+        "\n",
+        "# Output the train subsets and the test subset\n",
+        "np.savetxt(f\"parameters_{num_samples}.txt\", scaled_lhs_sample, fmt=\"%.2f\")\n",
+        "\n",
+        "# Visualize the vessels represented by all the samples\n",
+        "viz = utils.Visualizer()\n",
+        "for i in range(num_samples):\n",
+        "  print(f\"Sample {i+1}: {scaled_lhs_sample[i]}\")\n",
+        "  viz.add_vessel(control_point=np.array([scaled_lhs_sample[i][1], 0., scaled_lhs_sample[i][2]]), vessel_radius=scaled_lhs_sample[i][0], deploy_site=scaled_lhs_sample[i][3], vessel_opacity=0.1)\n",
+        "viz.show()"
+      ],
       "metadata": {
-        "id": "Dru5laci1hKP"
+        "id": "rFyY7rsdQ-3e"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -505,9 +549,7 @@
         "\n",
         "2. Then, positioned along the centerline of the vessel. ![Positioning](https://i.imgur.com/ChGbkJU.gif)\n",
         "\n",
-        "3. And finally, deployed. ![Deployment](https://i.imgur.com/hsWHPZJ.gif)\n",
-        "\n",
-        "As this topic will not be covered in the current class, additional information on finite-element simulations of stent deployment can be found in the literature provided as reference material."
+        "3. And finally, deployed. ![Deployment](https://i.imgur.com/hsWHPZJ.gif)\n"
       ]
     },
     {
@@ -847,7 +889,7 @@
         "id": "DkFfkNhaeObm"
       },
       "source": [
-        "The errors are quite high, which means that the machine learning model is struggling to establish a mapping between the input and output when using the raw data.\n",
+        "The errors are very high, which means that the machine learning model is struggling to establish a mapping between the input and output when using the raw data.\n",
         "\n",
         "This could be due to the large variation between the input and output data. To evaluate this, we can compute statistical measures like the variance or standard deviation for both the input and output datasets. These metrics will help us quantify the spread or dispersion in the data, providing insight into whether significant differences in scale or range between the input and output are affecting the model's ability to learn."
       ]
@@ -950,16 +992,11 @@
         "id": "J7_sGNy53Hd6"
       },
       "source": [
-        "**EXERCIZE:**  Train again the machine learning model but with the scaled data now."
+        "We can train again the machine learning model but with the scaled data now."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "w9mEbiJR2Bmv"
-      },
-      "outputs": [],
       "source": [
         "# Build the Kriging model on the data: define a kernel for the Gaussian Process\n",
         "initial_kernel = C(1.0, (1e-1, 1e3)) * RBF(1.0, (1e-2, 1e2))\n",
@@ -968,13 +1005,13 @@
         "gp = GaussianProcessRegressor(kernel=initial_kernel, n_restarts_optimizer=10, random_state=42)\n",
         "\n",
         "# Fit the model\n",
-        "gp.fit(, )\n",
+        "gp.fit(X_train_scaled, y_train_scaled)\n",
         "\n",
         "# Predict using the Kriging model on the test data\n",
-        "y_pred_scaled = gp.predict()\n",
+        "y_pred_scaled = gp.predict(X_test_scaled)\n",
         "\n",
         "# Inverse transform to reconstruct the original output\n",
-        "y_pred = scaler_y.inverse_transform()\n",
+        "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
         "\n",
         "# Calculate RMSE for each case\n",
         "rmse_vec = []\n",
@@ -987,7 +1024,12 @@
         "# Compute the relative error based on the mean radius\n",
         "relative_error = (np.mean(rmse_vec) / average_radius) * 100\n",
         "print(f\"Relative Error: {relative_error:.2f}%\")"
-      ]
+      ],
+      "metadata": {
+        "id": "LXX3pH40VhH2"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1024,17 +1066,19 @@
       "source": [
         "This long training time may be due to the complexity of learning all of these outputs simultaneously.\n",
         "\n",
-        "**EXERCISE:** How many output is our system composed of?"
+        "How many output is our system composed of?"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "print(y_train.shape)"
+      ],
       "metadata": {
-        "id": "1z33VTWDq_D9"
+        "id": "LSPthc-aVyN8"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1140,16 +1184,11 @@
         "id": "vzrjcquh8CzS"
       },
       "source": [
-        "**EXERCIZE:**  Train again the machine learning model but with the scaled reuduced data now."
+        "We can train again the machine learning model but with the scaled reuduced data now."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Ln3atvRv0OgF"
-      },
-      "outputs": [],
       "source": [
         "# Build the Kriging model on the data: define a kernel for the Gaussian Process\n",
         "initial_kernel = C(1.0, (1e2, 1e5)) * RBF(1.0, (1e-2, 1e2)) + WhiteKernel(noise_level=1e-2)\n",
@@ -1159,7 +1198,7 @@
         "\n",
         "# Measure the time taken to fit the model\n",
         "start_time = time.time()\n",
-        "gp.fit( , )\n",
+        "gp.fit(X_train_scaled, y_train_scaled_reduced)\n",
         "end_time = time.time()\n",
         "\n",
         "# Compute the computational time\n",
@@ -1167,11 +1206,11 @@
         "print(f\"Time taken to fit the Gaussian Process model: {fit_time:.4f} seconds\")\n",
         "\n",
         "# Predict using the Kriging model on the test data\n",
-        "y_pred_scaled_reduced = gp.predict()\n",
+        "y_pred_scaled_reduced = gp.predict(X_test_scaled)\n",
         "\n",
         "# Inverse transform to reconstruct the original output\n",
-        "y_pred_scaled = pca_simulations.inverse_transform()\n",
-        "y_pred = scaler_y.inverse_transform()\n",
+        "y_pred_scaled = pca_simulations.inverse_transform(y_pred_scaled_reduced)\n",
+        "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
         "\n",
         "# Calculate RMSE for each case\n",
         "rmse_vec = []\n",
@@ -1184,7 +1223,12 @@
         "# Compute the relative error based on the mean radius\n",
         "relative_error = (np.mean(rmse_vec) / average_radius) * 100\n",
         "print(f\"Relative Error: {relative_error:.2f}%\")"
-      ]
+      ],
+      "metadata": {
+        "id": "PcznVgd1W_M2"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1268,7 +1312,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**EXERCISE:** Write in a single cell all the passages for building a ROM with scaled and reduced data but now using the largest dataset. Visualise the predicted stent and compare it with the one predicted using the machine learning trained with the smallest dataset."
+        "We can now compare the performance of the machine learning model when trained with increasingly largher."
       ],
       "metadata": {
         "id": "RJi9IBI2S0Lz"
@@ -1276,31 +1320,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2xJHcOZ6S0ie"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DxVBSv3OzjHs"
-      },
-      "source": [
-        "# Extra\n",
-        "\n",
-        "We can now compare the performance of the machine learning model when we use a\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "RIjQDJnNzr2N"
-      },
-      "outputs": [],
       "source": [
         "# Prepare lists to store the errors\n",
         "N_values = [100, 250, 500, 1000]\n",
@@ -1389,8 +1408,13 @@
         "plt.title(\"Error vs Number of Training Samples\")\n",
         "plt.legend()\n",
         "plt.grid(True)\n",
-        "plt.show()\n"
-      ]
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "1FGnBmPMXPTa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1398,16 +1422,13 @@
         "id": "LazdnmCWNfFn"
       },
       "source": [
-        "Finally, let's visualise the stent predited by training the machine learning model with `N = 1000` cases."
+        "Finally, let's visualise the stent predited by training the machine learning model with `N` cases."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "XSZVOra2G3Xv"
       },
       "outputs": [],
